--- a/composer.json
+++ b/composer.json
@@ -33,8 +33,8 @@
     ],
     "require": {
         "php": ">=7.0",
-        "owen-it/laravel-auditing": "^v13.5",
-        "elasticsearch/elasticsearch": "7.*"
+        "owen-it/laravel-auditing": "^v13.5|^v14.0",
+        "elasticsearch/elasticsearch": "^7.0|^8.0"
     },
     "autoload": {
         "psr-4": {
